feat: new endpoints and updates and fixes and idk
