# docs/swagger.yaml
@@ -12,6 +12,8 @@ definitions:
         type: string
       masterId:
         type: string
+      sessionCount:
+        type: integer
       sessions:
         items:
           $ref: '#/definitions/dtos.CampaignSessionTie'
@@ -32,8 +34,6 @@ definitions:
       cachedScheduledAt:
         type: string
       cachedTitle:
-        type: string
-      campaignId:
         type: string
       orderIndex:
         type: integer
@@ -188,6 +188,15 @@ definitions:
     - Open
     - Application
     - Private
+  dtos.SessionCampaignRef:
+    properties:
+      campaignId:
+        type: string
+      index:
+        type: integer
+      title:
+        type: string
+    type: object
   dtos.SessionCardData:
     properties:
       nextSession:
@@ -243,6 +252,10 @@ definitions:
     - Offline
   dtos.SessionListResponse:
     properties:
+      campaigns:
+        additionalProperties:
+          $ref: '#/definitions/dtos.SessionCampaignRef'
+        type: object
       items:
         items:
           $ref: '#/definitions/dtos.Session'
@@ -290,6 +303,8 @@ definitions:
     type: object
   dtos.SessionResponse:
     properties:
+      campaign:
+        $ref: '#/definitions/dtos.SessionCampaignRef'
       players:
         items:
           $ref: '#/definitions/dtos.SessionPlayer'
@@ -354,6 +369,13 @@ definitions:
         type: number
       username:
         type: string
+    type: object
+  internal_handlers.AddPlayersRequest:
+    properties:
+      playerIds:
+        items:
+          type: string
+        type: array
     type: object
   internal_handlers.ChangeCampaignStatusRequest:
     properties:
@@ -421,6 +443,8 @@ definitions:
     type: object
   internal_handlers.EditCampaignRequest:
     properties:
+      availability:
+        $ref: '#/definitions/dtos.SessionAvailability'
       description:
         type: string
       systemId:
@@ -523,6 +547,10 @@ paths:
         name: status
         type: string
       - description: Sort field
+        enum:
+        - created_at
+        - title
+        - status
         in: query
         name: sort
         type: string
@@ -555,6 +583,10 @@ paths:
               nextCursor:
                 type: string
             type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/internal_handlers.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
@@ -747,7 +779,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/dtos.CampaignSessionTie'
+              $ref: '#/definitions/dtos.Session'
             type: array
         "403":
           description: Forbidden
@@ -1881,6 +1913,47 @@ paths:
           schema:
             $ref: '#/definitions/internal_handlers.ErrorResponse'
       summary: List session players
+      tags:
+      - sessions
+    post:
+      parameters:
+      - description: Session ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Players' IDs
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/internal_handlers.AddPlayersRequest'
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/internal_handlers.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/internal_handlers.ErrorResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/internal_handlers.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/internal_handlers.ErrorResponse'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/internal_handlers.ErrorResponse'
+      security:
+      - CookieAuth: []
+      summary: Master adds players
       tags:
       - sessions
   /v1/sessions/{id}/players/{playerId}:
